--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -142,6 +142,7 @@ Library
      SAT.PBO
      SAT.PBO.BC
      SAT.PBO.BCD
+     SAT.PBO.BCD2
      SAT.PBO.MSU4
      SAT.PBO.UnsatBased
      SAT.TheorySolver
