split MIP problem definition from Text.LPFile module into Data.MIP module

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -124,6 +124,7 @@ Library
      Data.LA
      Data.LA.FOL
      Data.LBool
+     Data.MIP
      Data.Polynomial
      Data.Polynomial.Factorization.FiniteField
      Data.Polynomial.Factorization.Hensel
