--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -100,17 +100,17 @@ Library
      Algorithm.Simplex
      Algorithm.Simplex2
      Converter.ObjType
-     Converter.LP2SMT
-     Converter.MaxSAT2LP
+     Converter.MIP2SMT
+     Converter.MaxSAT2IP
      Converter.MaxSAT2NLPB
      Converter.MaxSAT2WBO
-     Converter.PB2LP
+     Converter.PB2IP
      Converter.PB2LSP
      Converter.PB2WBO
      Converter.PBSetObj
      Converter.PB2SMP
      Converter.SAT2PB
-     Converter.SAT2LP
+     Converter.SAT2IP
      Converter.WBO2PB
      Data.AlgebraicNumber.Complex
      Data.AlgebraicNumber.Real
