--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -50,6 +50,10 @@ Flag Exceptions06
   Description: use exceptions >=0.6
   Manual: False
 
+Flag Comonad4
+  Description: use comonad >=4
+  Manual: False
+
 source-repository head
   type:     git
   location: git://github.com/msakai/toysolver.git
@@ -62,9 +66,12 @@ Library
      containers >= 0.4.2, unordered-containers >=0.2.3 && <0.3.0, mtl >=2.1.2, array, random, stm >=2.3, parsec, bytestring, filepath, deepseq, time, old-locale, primes, process >=1.1.0.2,
      parse-dimacs, queue, heaps, unbounded-delays, lattices >=1.2.1.1, vector-space >=0.8.6, multiset, algebra,
      prettyclass >=1.0.0, type-level-numbers >=0.1.1.0 && <0.2.0.0, hashable >=1.1.2.5 && <1.3.0.0, intern >=0.9.1.2 && <1.0.0.0,
-     OptDir, data-interval >=0.4.0, finite-field >=0.7.0 && <1.0.0, sign >=0.2.0 && <1.0.0,
-     -- This is a hack to avoid combining comonad-4.* and representable-functors-3.2.0.1 when compiling algebra package.
-     representable-functors >=3.2.0.2
+     OptDir, data-interval >=0.4.0, finite-field >=0.7.0 && <1.0.0, sign >=0.2.0 && <1.0.0
+  -- This is a hack to avoid combining comonad-4.* and representable-functors-3.2.0.1 when compiling algebra package.
+  if flag(Comonad4)
+     Build-Depends: comonad >=4
+  if !flag(Comonad4)
+     Build-Depends: representable-functors >=3.2.0.2
   -- NOTE: temporary-1.2.0.2 does not work with exceptions-0.6
   if flag(Exceptions06)
      Build-Depends: temporary >1.2.0.2, exceptions >=0.6
