require logic-TPTP >=0.4.1 because logic-TPTP-0.4.0.0 did not work with transformers >=0.4.0 nor GHC-7.8

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -218,7 +218,7 @@ Executable toyfmf
   Main-is: toyfmf.hs
   HS-Source-Dirs: toyfmf
   If flag(BuildToyFMF)
-    Build-Depends: base >=4 && <5, containers >= 0.4.2, toysolver, logic-TPTP
+    Build-Depends: base >=4 && <5, containers >= 0.4.2, toysolver, logic-TPTP >=0.4.1
   Default-Language: Haskell2010
   if impl(ghc >= 7)
     GHC-Options: -rtsopts
