make ToySolver.Data.PriorityQueue and ToySolver.Data.IndexedPriorityQueue to be more similar

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -188,6 +188,7 @@ Library
      ToySolver.Data.AlgebraicNumber.Graeffe
      ToySolver.Data.Polynomial.Base
      ToySolver.Data.IndexedPriorityQueue
+     ToySolver.Data.PriorityQueue
      ToySolver.Data.SeqQueue
      Paths_toysolver
   GHC-Prof-Options: -auto-all
