--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -158,6 +158,7 @@ Library
      ToySolver.Data.Polynomial.Factorization.Zassenhaus
      ToySolver.Data.Polynomial.GroebnerBasis
      ToySolver.Data.Polynomial.Interpolation.Lagrange
+     ToySolver.Data.Vec
      ToySolver.Data.Var
      ToySolver.SAT
      ToySolver.SAT.Integer
@@ -367,7 +368,7 @@ Test-suite TestUtil
   Main-is:           TestUtil.hs
   Build-depends:     base >=4 && <5, toysolver, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,HUnit,QuickCheck >=2.5 && <3
   Default-Language: Haskell2010
-  Other-Extensions: TemplateHaskell
+  Other-Extensions: TemplateHaskell, ScopedTypeVariables
 
 Benchmark BenchmarkSATLIB
   type:             exitcode-stdio-1.0
