--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -59,6 +59,10 @@ Flag Exceptions06
   Description: use exceptions >=0.6
   Manual: False
 
+Flag Random1013
+  Description: use random >=1.0.1.3
+  Manual: False
+
 source-repository head
   type:     git
   location: git://github.com/msakai/toysolver.git
@@ -68,7 +72,7 @@ Library
   Hs-source-dirs: src
   Build-Depends:
      base >=4 && <5,
-     containers >= 0.4.2, unordered-containers >=0.2.3 && <0.3.0, mtl >=2.1.2, array, random, stm >=2.3, parsec, bytestring, filepath, deepseq, time, old-locale, primes, process >=1.1.0.2,
+     containers >= 0.4.2, unordered-containers >=0.2.3 && <0.3.0, mtl >=2.1.2, array, stm >=2.3, parsec, bytestring, filepath, deepseq, time, old-locale, primes, process >=1.1.0.2,
      parse-dimacs, queue, heaps, unbounded-delays, lattices >=1.2.1.1, vector-space >=0.8.6, multiset,
      prettyclass >=1.0.0, type-level-numbers >=0.1.1.0 && <0.2.0.0, hashable >=1.1.2.5 && <1.3.0.0, intern >=0.9.1.2 && <1.0.0.0,
      loop >=0.2.0 && < 1.0.0,
@@ -78,6 +82,11 @@ Library
      Build-Depends: temporary >1.2.0.2, exceptions >=0.6
   if !flag(Exceptions06)
      Build-Depends: temporary >=1.2, exceptions ==0.5
+  if flag(Random1013)
+     -- NOTE: random-1.0.1.3 uses atomicModifyIORef' which is provided by base >=4.6.0.0.
+     Build-Depends: base >=4.6.0.0, random >=1.0.1.3
+  else
+     Build-Depends: random <1.0.1.3
   if impl(ghc)
      Build-Depends: ghc-prim
   Default-Language: Haskell2010
