add Yices2 specific output functionalities.
* do not output "(set-evidence! true)"
* use floating point representation for rational numbers
* add --yices2 command line option to lpconvert/pbconvert

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -35,6 +35,7 @@ Extra-Source-Files:
    samples/sdp/*.dat
    samples/sdp/*.dat-s
    samples/smt/*.smt2
+   samples/smt/*.ys
    samples/qbf/*.qdimacs
    test/TestAReal2.hs
    benchmarks/UF250.1065.100/*.cnf
