--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -74,7 +74,7 @@ Library
   Hs-source-dirs: src
   Build-Depends:
      base >=4 && <5,
-     containers >= 0.4.2, unordered-containers >=0.2.3 && <0.3.0, mtl >=2.1.2, array, stm >=2.3, parsec, bytestring, filepath, deepseq, time, old-locale, primes, process >=1.1.0.2,
+     containers >= 0.4.2, unordered-containers >=0.2.3 && <0.3.0, mtl >=2.1.2, array, stm >=2.3, parsec >=3.1.2 && <4, bytestring, filepath, deepseq, time, old-locale, primes, process >=1.1.0.2,
      parse-dimacs, queue, heaps, unbounded-delays, vector-space >=0.8.6, multiset,
      prettyclass >=1.0.0, type-level-numbers >=0.1.1.0 && <0.2.0.0, hashable >=1.1.2.5 && <1.3.0.0, intern >=0.9.1.2 && <1.0.0.0,
      loop >=0.2.0 && < 1.0.0,
