--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -77,7 +77,7 @@ Library
      containers >= 0.4.2, unordered-containers >=0.2.3 && <0.3.0, mtl >=2.1.2, array, stm >=2.3, parsec >=3.1.2 && <4, bytestring, filepath, deepseq, time, old-locale, primes, process >=1.1.0.2,
      parse-dimacs, queue, heaps, unbounded-delays, vector-space >=0.8.6, multiset,
      prettyclass >=1.0.0, type-level-numbers >=0.1.1.0 && <0.2.0.0, hashable >=1.1.2.5 && <1.3.0.0, intern >=0.9.1.2 && <1.0.0.0,
-     loop >=0.2.0 && < 1.0.0,
+     loop >=0.2.0 && < 1.0.0, data-default-class,
      OptDir, extended-reals >=0.1 && <1.0, data-interval >=1.0.1 && <1.1.0, finite-field >=0.7.0 && <1.0.0, sign >=0.2.0 && <1.0.0
   -- NOTE: temporary-1.2.0.2 does not work with exceptions-0.6
   if flag(Exceptions06)
@@ -211,7 +211,7 @@ Library
 Executable toysolver
   Main-is: toysolver.hs
   HS-Source-Dirs: toysolver
-  Build-Depends: base >=4.4 && <5, containers, array, filepath, parsec, OptDir, parse-dimacs, toysolver
+  Build-Depends: base >=4.4 && <5, containers, array, data-default-class, filepath, parsec, OptDir, parse-dimacs, toysolver
   Default-Language: Haskell2010
   if impl(ghc)
     GHC-Options: -threaded
@@ -223,7 +223,7 @@ Executable toysat
   Main-is: toysat.hs
   Other-Modules: UBCSAT
   HS-Source-Dirs: toysat
-  Build-Depends: base >=4 && <5, random, containers >= 0.4.2, array, process >=1.1.0.2, parsec, bytestring, filepath, parse-dimacs, time, old-locale, unbounded-delays, vector-space >=0.8.6, toysolver
+  Build-Depends: base >=4 && <5, data-default-class, random, containers >= 0.4.2, array, process >=1.1.0.2, parsec, bytestring, filepath, parse-dimacs, time, old-locale, unbounded-delays, vector-space >=0.8.6, toysolver
   Default-Language: Haskell2010
   Other-Extensions: ScopedTypeVariables, CPP
   if impl(ghc >= 7)
