--- a/.travis.yml
+++ b/.travis.yml
@@ -35,11 +35,11 @@ before_install:
 
 install:
  - cabal update
- - cabal install --only-dependencies --enable-tests -v2  # -v2 provides useful information for debugging
+ - cabal install --only-dependencies --flag=BuildSamplePrograms --enable-tests -v2  # -v2 provides useful information for debugging
 
 # Here starts the actual work to be performed for the package under test; any command which exits with a non-zero exit code causes the build to fail.
 script:
- - cabal configure --enable-tests -v2  # -v2 provides useful information for debugging
+ - cabal configure --flag=BuildSamplePrograms --enable-tests -v2  # -v2 provides useful information for debugging
  - cabal build   # this builds all libraries and executables (including tests/benchmarks)
  - cabal test
  - cabal check
