--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -354,10 +354,10 @@ Test-suite TestAReal
   Default-Language: Haskell2010
   Other-Extensions: TemplateHaskell, ScopedTypeVariables
 
-Test-suite TestQE
+Test-suite TestArith
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
-  Main-is:           TestQE.hs
+  Main-is:           TestArith.hs
   Build-depends:     base >=4 && <5, containers, vector-space >=0.8.6, toysolver, OptDir, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,HUnit,QuickCheck >=2.5 && <3
   Default-Language: Haskell2010
   Other-Extensions: TemplateHaskell
