--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -337,6 +337,8 @@ Executable maxsatverify
 
 Executable pbverify
   Main-is: pbverify.hs
+  If !flag(BuildMiscPrograms)
+    Buildable: False
   HS-Source-Dirs: pbverify
   Build-Depends: base >=4 && <5, array, containers, filepath, toysolver
   Default-Language: Haskell2010
