--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -88,6 +88,7 @@ Library
   Build-Depends:
      base >=4 && <5,
      containers >= 0.4.2, unordered-containers >=0.2.3 && <0.3.0, mtl >=2.1.2, array >=0.4.0.0, stm >=2.3, parsec >=3.1.2 && <4, bytestring >=0.9.2.1 && <0.11, filepath, deepseq, time, primes, process >=1.1.0.2, dlist >=0.7.0 && <0.8.0,
+     attoparsec,
      parse-dimacs, queue, heaps, unbounded-delays, vector-space >=0.8.6, multiset,
      prettyclass >=1.0.0, type-level-numbers >=0.1.1.0 && <0.2.0.0, hashable >=1.1.2.5 && <1.3.0.0, intern >=0.9.1.2 && <1.0.0.0,
      loop >=0.2.0 && < 1.0.0, data-default-class,
@@ -213,6 +214,8 @@ Library
      ToySolver.Text.MPSFile
      ToySolver.Text.MaxSAT
      ToySolver.Text.PBFile
+     ToySolver.Text.PBFile.Parsec
+     ToySolver.Text.PBFile.Attoparsec
      ToySolver.Text.SDPFile
      ToySolver.Internal.Data.IndexedPriorityQueue
      ToySolver.Internal.Data.IOURef
@@ -228,7 +231,6 @@ Library
      ToySolver.Data.AlgebraicNumber.Graeffe
      ToySolver.Data.Polynomial.Base
      ToySolver.Text.PBFile.Types
-     ToySolver.Text.PBFile.Parsec
      Paths_toysolver
   GHC-Prof-Options: -auto-all
 
