--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -87,12 +87,37 @@ Library
   Hs-source-dirs: src
   Build-Depends:
      base >=4 && <5,
-     containers >= 0.4.2, unordered-containers >=0.2.3 && <0.3.0, mtl >=2.1.2, array >=0.4.0.0, stm >=2.3, parsec >=3.1.2 && <4, bytestring >=0.9.2.1 && <0.11, filepath, deepseq, time, primes, process >=1.1.0.2, dlist >=0.7.0 && <0.8.0,
+     containers >= 0.4.2,
+     unordered-containers >=0.2.3 && <0.3.0,
+     mtl >=2.1.2,
+     array >=0.4.0.0,
+     stm >=2.3,
+     parsec >=3.1.2 && <4,
+     bytestring >=0.9.2.1 && <0.11,
+     filepath,
+     deepseq,
+     time,
+     primes,
+     process >=1.1.0.2,
+     dlist >=0.7.0 && <0.8.0,
      attoparsec,
-     parse-dimacs, queue, heaps, unbounded-delays, vector-space >=0.8.6, multiset,
-     prettyclass >=1.0.0, type-level-numbers >=0.1.1.0 && <0.2.0.0, hashable >=1.1.2.5 && <1.3.0.0, intern >=0.9.1.2 && <1.0.0.0,
-     loop >=0.2.0 && < 1.0.0, data-default-class,
-     OptDir, extended-reals >=0.1 && <1.0, data-interval >=1.0.1 && <1.3.0, finite-field >=0.7.0 && <1.0.0, sign >=0.2.0 && <1.0.0
+     parse-dimacs,
+     queue,
+     heaps,
+     unbounded-delays,
+     vector-space >=0.8.6,
+     multiset,
+     prettyclass >=1.0.0,
+     type-level-numbers >=0.1.1.0 && <0.2.0.0,
+     hashable >=1.1.2.5 && <1.3.0.0,
+     intern >=0.9.1.2 && <1.0.0.0,
+     loop >=0.2.0 && < 1.0.0,
+     data-default-class,
+     OptDir,
+     extended-reals >=0.1 && <1.0,
+     data-interval >=1.0.1 && <1.3.0,
+     finite-field >=0.7.0 && <1.0.0,
+     sign >=0.2.0 && <1.0.0
   -- NOTE: temporary-1.2.0.2 does not work with exceptions-0.6
   if flag(Exceptions06)
      Build-Depends: temporary >1.2.0.2, exceptions >=0.6
@@ -237,7 +262,16 @@ Library
 Executable toysolver
   Main-is: toysolver.hs
   HS-Source-Dirs: toysolver
-  Build-Depends: base >=4.4 && <5, containers, array, data-default-class, filepath, parsec, OptDir, parse-dimacs, toysolver
+  Build-Depends:
+    base >=4.4 && <5,
+    containers,
+    array,
+    data-default-class,
+    filepath,
+    parsec,
+    OptDir,
+    parse-dimacs,
+    toysolver
   Default-Language: Haskell2010
   if impl(ghc)
     GHC-Options: -threaded
@@ -249,7 +283,20 @@ Executable toysat
   Main-is: toysat.hs
   Other-Modules: UBCSAT
   HS-Source-Dirs: toysat
-  Build-Depends: base >=4 && <5, data-default-class, random, containers >= 0.4.2, array, process >=1.1.0.2, parsec, bytestring, filepath, parse-dimacs, unbounded-delays, vector-space >=0.8.6, toysolver
+  Build-Depends:
+    base >=4 && <5,
+    data-default-class,
+    random,
+    containers >= 0.4.2,
+    array,
+    process >=1.1.0.2,
+    parsec,
+    bytestring,
+    filepath,
+    parse-dimacs,
+    unbounded-delays,
+    vector-space >=0.8.6,
+    toysolver
   if flag(Time15)
     Build-Depends: time >=1.5.0
   else
@@ -269,7 +316,11 @@ Executable toyfmf
   Main-is: toyfmf.hs
   HS-Source-Dirs: toyfmf
   If flag(BuildToyFMF)
-    Build-Depends: base >=4 && <5, containers >= 0.4.2, toysolver, logic-TPTP >=0.4.1
+    Build-Depends:
+      base >=4 && <5,
+      containers >= 0.4.2,
+      toysolver,
+      logic-TPTP >=0.4.1
   Default-Language: Haskell2010
   if impl(ghc >= 7)
     GHC-Options: -rtsopts
@@ -280,13 +331,23 @@ Executable toyfmf
 Executable lpconvert
   Main-is: lpconvert.hs
   HS-Source-Dirs: lpconvert
-  Build-Depends: base >=4 && <5, containers, filepath, parse-dimacs, toysolver
+  Build-Depends:
+    base >=4 && <5,
+    containers,
+    filepath,
+    parse-dimacs,
+    toysolver
   Default-Language: Haskell2010
 
 Executable pbconvert
   Main-is: pbconvert.hs
   HS-Source-Dirs: pbconvert
-  Build-Depends: base >=4 && <5, containers, filepath, parse-dimacs, toysolver
+  Build-Depends:
+    base >=4 && <5,
+    containers,
+    filepath,
+    parse-dimacs,
+    toysolver
   Default-Language: Haskell2010
 
 -- Sample Programs
@@ -296,7 +357,10 @@ Executable sudoku
     Buildable: False
   Main-is: sudoku.hs
   HS-Source-Dirs: samples/programs/sudoku
-  Build-Depends: base, array, toysolver
+  Build-Depends:
+    base,
+    array,
+    toysolver
   Default-Language: Haskell2010
 
 Executable nqueens
@@ -304,7 +368,10 @@ Executable nqueens
     Buildable: False
   Main-is: nqueens.hs
   HS-Source-Dirs: samples/programs/nqueens
-  Build-Depends: base, array, toysolver
+  Build-Depends:
+    base,
+    array,
+    toysolver
   Default-Language: Haskell2010
 
 Executable knapsack
@@ -312,7 +379,10 @@ Executable knapsack
     Buildable: False
   Main-is: knapsack.hs
   HS-Source-Dirs: samples/programs/knapsack
-  Build-Depends: base, array, toysolver
+  Build-Depends:
+    base,
+    array,
+    toysolver
   Default-Language: Haskell2010
 
 Executable htc
@@ -320,7 +390,10 @@ Executable htc
     Buildable: False
   Main-is: htc.hs
   HS-Source-Dirs: samples/programs/htc
-  Build-Depends: base, containers, toysolver
+  Build-Depends:
+    base,
+    containers,
+    toysolver
   Default-Language: Haskell2010
 
 -- Misc Programs
@@ -330,7 +403,11 @@ Executable pigeonhole
     Buildable: False
   Main-is: pigeonhole.hs
   HS-Source-Dirs: pigeonhole
-  Build-Depends: base >=4 && <5, containers, filepath, toysolver
+  Build-Depends:
+    base >=4 && <5,
+    containers,
+    filepath,
+    toysolver
   Default-Language: Haskell2010
 
 Executable maxsatverify
@@ -338,7 +415,12 @@ Executable maxsatverify
     Buildable: False
   Main-is: maxsatverify.hs
   HS-Source-Dirs: maxsatverify
-  Build-Depends: base >=4 && <5, array, containers, filepath, toysolver
+  Build-Depends:
+    base >=4 && <5,
+    array,
+    containers,
+    filepath,
+    toysolver
   Default-Language: Haskell2010
 
 Executable pbverify
@@ -346,7 +428,12 @@ Executable pbverify
   If !flag(BuildMiscPrograms)
     Buildable: False
   HS-Source-Dirs: pbverify
-  Build-Depends: base >=4 && <5, array, containers, filepath, toysolver
+  Build-Depends:
+    base >=4 && <5,
+    array,
+    containers,
+    filepath,
+    toysolver
   Default-Language: Haskell2010
 
 -- Test suites and benchmarks
@@ -355,7 +442,17 @@ Test-suite TestSAT
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
   Main-is:           TestSAT.hs
-  Build-depends:     base >=4 && <5, array, containers, toysolver, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,HUnit,QuickCheck >=2.5 && <3
+  Build-depends:
+    base >=4 && <5,
+    array,
+    containers,
+    toysolver,
+    test-framework,
+    test-framework-th,
+    test-framework-hunit,
+    test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,
+    HUnit,
+    QuickCheck >=2.5 && <3
   Default-Language: Haskell2010
   Other-Extensions: TemplateHaskell
 
@@ -363,7 +460,15 @@ Test-suite TestSimplex
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
   Main-is:           TestSimplex.hs
-  Build-depends:     base >=4 && <5, containers, mtl, toysolver, test-framework,test-framework-th,test-framework-hunit,HUnit
+  Build-depends:
+    base >=4 && <5,
+    containers,
+    mtl,
+    toysolver,
+    test-framework,
+    test-framework-th,
+    test-framework-hunit,
+    HUnit
   Default-Language: Haskell2010
   Other-Extensions: TemplateHaskell
 
@@ -371,7 +476,15 @@ Test-suite TestSimplex2
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
   Main-is:           TestSimplex2.hs
-  Build-depends:     base >=4 && <5, containers, vector-space >=0.8.6, toysolver, test-framework,test-framework-th,test-framework-hunit,HUnit
+  Build-depends:
+    base >=4 && <5,
+    containers,
+    vector-space >=0.8.6,
+    toysolver,
+    test-framework,
+    test-framework-th,
+    test-framework-hunit,
+    HUnit
   Default-Language: Haskell2010
   Other-Extensions: TemplateHaskell
 
@@ -379,7 +492,17 @@ Test-suite TestMIPSolver2
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
   Main-is:           TestMIPSolver2.hs
-  Build-depends:     base >=4 && <5, containers, vector-space >=0.8.6, toysolver, test-framework, test-framework-th, test-framework-hunit, HUnit, OptDir, stm
+  Build-depends:
+    base >=4 && <5,
+    containers,
+    vector-space >=0.8.6,
+    toysolver,
+    test-framework,
+    test-framework-th,
+    test-framework-hunit,
+    HUnit,
+    OptDir,
+    stm
   Default-Language: Haskell2010
   Other-Extensions: TemplateHaskell
 
@@ -387,7 +510,19 @@ Test-suite TestPolynomial
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
   Main-is:           TestPolynomial.hs
-  Build-depends:     base >=4 && <5, containers, toysolver, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,HUnit,QuickCheck >=2.5 && <3, data-interval, finite-field >=0.7.0 && <1.0.0, prettyclass >=1.0.0
+  Build-depends:
+    base >=4 && <5,
+    containers,
+    toysolver,
+    test-framework,
+    test-framework-th,
+    test-framework-hunit,
+    test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,
+    HUnit,
+    QuickCheck >=2.5 && <3,
+    data-interval,
+    finite-field >=0.7.0 && <1.0.0,
+    prettyclass >=1.0.0
   Default-Language: Haskell2010
   Other-Extensions: TemplateHaskell
 
@@ -395,7 +530,17 @@ Test-suite TestAReal
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
   Main-is:           TestAReal.hs
-  Build-depends:     base >=4 && <5, containers, toysolver, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,HUnit,QuickCheck >=2.5 && <3, data-interval
+  Build-depends:
+    base >=4 && <5,
+    containers,
+    toysolver,
+    test-framework,
+    test-framework-th,
+    test-framework-hunit,
+    test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,
+    HUnit,
+    QuickCheck >=2.5 && <3,
+    data-interval
   Default-Language: Haskell2010
   Other-Extensions: TemplateHaskell, ScopedTypeVariables
 
@@ -403,7 +548,19 @@ Test-suite TestArith
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
   Main-is:           TestArith.hs
-  Build-depends:     base >=4 && <5, containers, vector-space >=0.8.6, toysolver, data-interval, OptDir, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,HUnit,QuickCheck >=2.5 && <3
+  Build-depends:
+    base >=4 && <5,
+    containers,
+    vector-space >=0.8.6,
+    toysolver,
+    data-interval,
+    OptDir,
+    test-framework,
+    test-framework-th,
+    test-framework-hunit,
+    test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,
+    HUnit,
+    QuickCheck >=2.5 && <3
   Default-Language: Haskell2010
   Other-Extensions: TemplateHaskell
 
@@ -411,7 +568,18 @@ Test-suite TestContiTraverso
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
   Main-is:           TestContiTraverso.hs
-  Build-depends:     base >=4 && <5, containers, vector-space >=0.8.6, toysolver, OptDir, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,HUnit,QuickCheck >=2.5 && <3
+  Build-depends:
+    base >=4 && <5,
+    containers,
+    vector-space >=0.8.6,
+    toysolver,
+    OptDir,
+    test-framework,
+    test-framework-th,
+    test-framework-hunit,
+    test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,
+    HUnit,
+    QuickCheck >=2.5 && <3
   Default-Language: Haskell2010
   Other-Extensions: TemplateHaskell
 
@@ -419,7 +587,16 @@ Test-suite TestCongruenceClosure
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
   Main-is:           TestCongruenceClosure.hs
-  Build-depends:     base >=4 && <5, containers, toysolver, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,HUnit,QuickCheck >=2.5 && <3
+  Build-depends:
+    base >=4 && <5,
+    containers,
+    toysolver,
+    test-framework,
+    test-framework-th,
+    test-framework-hunit,
+    test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,
+    HUnit,
+    QuickCheck >=2.5 && <3
   Default-Language: Haskell2010
   Other-Extensions: TemplateHaskell
 
@@ -427,7 +604,16 @@ Test-suite TestLPFile
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
   Main-is:           TestLPFile.hs
-  Build-depends:     base >=4 && <5, containers, toysolver, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,HUnit,QuickCheck >=2.5 && <3
+  Build-depends:
+    base >=4 && <5,
+    containers,
+    toysolver,
+    test-framework,
+    test-framework-th,
+    test-framework-hunit,
+    test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,
+    HUnit,
+    QuickCheck >=2.5 && <3
   Default-Language: Haskell2010
   Other-Extensions: TemplateHaskell
 
@@ -435,7 +621,16 @@ Test-suite TestMPSFile
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
   Main-is:           TestMPSFile.hs
-  Build-depends:     base >=4 && <5, containers, toysolver, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,HUnit,QuickCheck >=2.5 && <3
+  Build-depends:
+    base >=4 && <5,
+    containers,
+    toysolver,
+    test-framework,
+    test-framework-th,
+    test-framework-hunit,
+    test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,
+    HUnit,
+    QuickCheck >=2.5 && <3
   Default-Language: Haskell2010
   Other-Extensions: TemplateHaskell
 
@@ -443,7 +638,15 @@ Test-suite TestPBFile
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
   Main-is:           TestPBFile.hs
-  Build-depends:     base >=4 && <5, toysolver, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,HUnit,QuickCheck >=2.5 && <3
+  Build-depends:
+    base >=4 && <5,
+    toysolver,
+    test-framework,
+    test-framework-th,
+    test-framework-hunit,
+    test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,
+    HUnit,
+    QuickCheck >=2.5 && <3
   Default-Language: Haskell2010
   Other-Extensions: TemplateHaskell
 
@@ -451,7 +654,15 @@ Test-suite TestSDPFile
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
   Main-is:           TestSDPFile.hs
-  Build-depends:     base >=4 && <5, toysolver, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,HUnit,QuickCheck >=2.5 && <3
+  Build-depends:
+    base >=4 && <5,
+    toysolver,
+    test-framework,
+    test-framework-th,
+    test-framework-hunit,
+    test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,
+    HUnit,
+    QuickCheck >=2.5 && <3
   Default-Language: Haskell2010
   Other-Extensions: TemplateHaskell
 
@@ -459,7 +670,16 @@ Test-suite TestUtil
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
   Main-is:           TestUtil.hs
-  Build-depends:     base >=4 && <5, containers, toysolver, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,HUnit,QuickCheck >=2.5 && <3
+  Build-depends:
+    base >=4 && <5,
+    containers,
+    toysolver,
+    test-framework,
+    test-framework-th,
+    test-framework-hunit,
+    test-framework-quickcheck2 >=0.2.12.3 && <0.4.0,
+    HUnit,
+    QuickCheck >=2.5 && <3
   Default-Language: Haskell2010
   Other-Extensions: TemplateHaskell, ScopedTypeVariables
 
@@ -467,5 +687,12 @@ Benchmark BenchmarkSATLIB
   type:             exitcode-stdio-1.0
   hs-source-dirs:   benchmarks
   main-is:          BenchmarkSATLIB.hs
-  build-depends:    base >=4 && <5, array, containers, random, parse-dimacs, toysolver, criterion >=1.0 && <1.1
+  build-depends:
+    base >=4 && <5,
+    array,
+    containers,
+    random,
+    parse-dimacs,
+    toysolver,
+    criterion >=1.0 && <1.1
   Default-Language: Haskell2010
