--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -94,6 +94,7 @@ Library
      stm >=2.3,
      parsec >=3.1.2 && <4,
      bytestring >=0.9.2.1 && <0.11,
+     bytestring-builder,
      filepath,
      deepseq,
      time,
