--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -87,7 +87,8 @@ Library
   Hs-source-dirs: src
   Build-Depends:
      base >=4 && <5,
-     containers >= 0.4.2,
+     -- mergeWithKey requires containers >=0.5.0
+     containers >=0.5.0,
      unordered-containers >=0.2.3 && <0.3.0,
      mtl >=2.1.2,
      array >=0.4.0.0,
