--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ env:
 
 matrix:
   allow_failures:
+   - env: CABALVER=1.16 GHCVER=7.4.2
    - env: CABALVER=1.22 GHCVER=7.10.1
 
 # Note: the distinction between `before_install` and `install` is not important.
